cluster/apps/networking/authentik/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "alpha-a-circle"
    cert-manager.io/cluster-issuer: ca-issuer
      #cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
      #    traefik.ingress.kubernetes.io/router.middlewares: networking-chain-authentik@kubernetescrd
  name: &appname authentik
  namespace: networking
spec:
  rules:
  - host: &uri "authentik.${SECRET_DEV_DOMAIN}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentik
            port:
              number: 80
  - host: "*.${SECRET_DEV_DOMAIN}"
    http:
      paths:
      - path: /outpost.goauthentik.io/
        pathType: Prefix
        backend:
          service:
            name: authentik
            port:
              number: 80
  tls:
  - hosts:
    - *uri
    secretName: *uri
